--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 a {
   color: black;
 }
@@ -9,6 +13,10 @@ a {
     display: flex;
     justify-content: flex-end;
     width: 100%;
+    height: 80px;
+    position: fixed;
+    z-index: 1;
+    background-color: white;
   }
 
 .logo_container {
@@ -47,7 +55,7 @@ div {
   display: flex;
   width: 1232px;
   margin: 0 auto 78px auto;
-  padding-top: 30px;
+  padding-top: 100px;
 }
 
 .column.large {
@@ -84,6 +92,11 @@ div {
 
 .pop-culture.image-content {
   background-image: url("../images/img-story-3.png");
+  text-align: center;
+}
+
+.cat-ceo.image-content {
+  background-image: url("../images/img-story-1.png");
   text-align: center;
 }
 
