--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -123,3 +123,52 @@ nav span {
   display: flex;
   flex-direction: column;
 }
+
+.news-bites {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.news-bites span {
+  border-bottom: 1px solid black;
+  margin: 0;
+  padding: 15px;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  text-align: left;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.footer {
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer nav {
+  display: inline-block;
+  padding-left: 25px;
+}
+
+.info .title {
+   font-family: Georgia;
+   font-size: 16px;
+   font-weight: bold;
+   color: white;
+   padding-right: 25px;
+   border-right: 2px solid white;
+}
