--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -147,7 +147,7 @@ h3 {
   font-weight: bold;
 }
 
-.footer {
+footer {
   background-color: MediumAquamarine;
   margin: auto;
   font-family: Verdana;
@@ -159,7 +159,7 @@ h3 {
   justify-content: center;
 }
 
-.footer nav {
+footer nav {
   display: inline-block;
   padding-left: 25px;
 }
