--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -152,6 +152,7 @@ footer {
   margin: auto;
   font-family: Verdana;
   font-size: 12px;
+  width: 100%;
   height: 300px;
   display: flex;
   align-items: center;
@@ -164,11 +165,12 @@ footer nav {
   padding-left: 25px;
 }
 
-.info .title {
+footer .title {
    font-family: Georgia;
    font-size: 16px;
    font-weight: bold;
    color: white;
    padding-right: 25px;
    border-right: 2px solid white;
+   display: inline-block;
 }
